# ifsc-validation-suite

./: .gitignore  Cargo.toml  README.md
src/: database.rs  ifsc_service.rs  main.rs  memory_store.rs  models.rs
ui/: index.html
ui/css/: style.css
ui/js/: app.js
