[package]
name = "ifsc_validation_suite"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
http = "1.3.1"
serde = { version = "1.0.221", features = ["derive"] }
tracing = "0.1.41"
tokio = { version = "1.47.1", features = ["full"] }
anyhow = "1.0.99"
tracing-subscriber = "0.3.20"
tower-http = { version = "0.6.6", features = ["cors"] }
chrono = { version = "0.4.42", features = ["serde"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
reqwest = { version = "0.12.23", features = ["json"] }
dashmap = "7.0.0-rc2"
memmap2 = "0.9.8"
dotenvy = "0.15.7"
serde_json = "1.0.145"
