[package]
name = "ifsc_validation_suite"
version = "2.0.0"
description = "Ultra-fast IFSC validation service with memory-mapped file caching, concurrent data structures, and dual-layer persistence for zero-latency banking operations"
authors = ["Upendra Vijay Dhanerwa <upendra.dhanerwa@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/upendrajangir/ifsc-validation-suite.git"
documentation = "https://docs.rs/ifsc_validation_suite"
readme = "README.md"
keywords = ["ifsc", "banking", "validation", "mmap", "api"]
categories = ["web-programming", "api-bindings", "database", "caching"]
edition = "2024"
rust-version = "1.89.0"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
tokio = { version = "1.47.1", features = ["full"] }


[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true

[profile.dev]
opt-level = 0
debug = true

[lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"

[lints.clippy.module_name_repetitions]
level = "allow"

[lints.clippy.missing_errors_doc]
level = "allow"

[lints.clippy.missing_panics_doc]
level = "allow"
